--- a/bin/config.yml
+++ b/bin/config.yml
@@ -4,8 +4,8 @@ always_fork: false
 url:
   - https://github.com/dkhamsing/open-source-ios-apps
 skip:
-  - mac-apps
-  - awesome-osx
+  - awesome-macos
   - android-apps
   - awesome-ios
   - awesome-swift
+  - awesome-arkit
